--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 		<p>DEE ENGAN</p>
 		</div>
 		
-	<div class="subtitle">	
-	<p>FICTION</p>
-	</div>
-	
-	<div class="links">
-	<p>"‘LECHUGUILLA.’” Test, 10 Nov. 2021, <a href="https://www.npr.org">https://www.test.com/magazine/2021/11/22/test-dog.</a></p>
-	</div>
-</body>
+		<div class="frontpageabout">
+		<a href="ABOUT.html/">ABOUT</a>
+		</div>
+				
+		<div class="frontpagefiction">
+		<a href="FICTION.html/">FICTION</a>
+		</div>
+	</body>
 </html>
