--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 		</div>
 		
 		<div class="frontpageabout">
+		<p>UNDER CONSTRUCTION</p>
+		</div>
+		
+		<div class="frontpageabout">
 		<a href="ABOUT.html/">ABOUT</a>
 		</div>
 				
