--- a/ABOUT.html
+++ b/ABOUT.html
@@ -14,7 +14,7 @@
 		
 	<div class="textforabout">
 	<p>I am a writer.</p>
-	<p>I do not have any social media accounts, but you can reach me at:</p>
+	<p>I do not have any social media accounts. But if you're interested in working together, you can reach me at:</p>
 	<p>W R I T I N G | A T | D E E E N G A N | D O T | C O M</p>
 	</div>
 	
