--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		</div>
 		
 		<div class="frontpageabout">
-		<a href="ABOUT.html/">ABOUT</a>
+		<a href="deeengan.com/ABOUT.html/">ABOUT</a>
 		</div>
 				
 		<div class="frontpagefiction">
