--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
 		</div>
 		
 		<div class="frontpageabout">
-		<p>UNDER CONSTRUCTION</p>
+		<p>UN</p>
+		<p>DER</p> 
+		<p>CON</p>
+		<p>STRUC</p>
+		<p>TION</p>
 		</div>
 		
 		<div class="frontpageabout">
