--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		</div>
 		
 		<div class="frontpageabout">
-		<a href="ABOUT.html/">ABOUT</a>
+		<a href="ABOUT.html">ABOUT</a>
 		</div>
 				
 		<div class="frontpagefiction">
