--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		</div>
 				
 		<div class="frontpagefiction">
-		<a href="FICTION.html/">FICTION</a>
+		<a href="FICTION.html">FICTION</a>
 		</div>
 	</body>
 </html>
