--- a/ABOUT.html
+++ b/ABOUT.html
@@ -15,7 +15,7 @@
 	<div class="textforabout">
 	<p>I am a writer.</p>
 	<p>I do not have any social media accounts.</p> 
-	<p>But if you're interested in working with me, you can try:</p>
+	<p>But you can try the following email address if you're interested in working with me:</p>
 	<p>W R I T I N G | A T | D E E E N G A N | D O T | C O M</p>
 	</div>
 	
