--- a/index.html
+++ b/index.html
@@ -2,30 +2,26 @@
 <html>
 	<head>
 	<meta charset="utf-8"> 
-		<Title>Dee Engan's World</Title>
+		<Title>Dee Engan's Bibliography</Title>
 		<link rel="stylesheet" type="text/css"
 		href="style.css">
 	</head>
 	
 <body>
 	<div class="title">
-		<p>DEE ENGAN</p>
+		<p class="brambles">DEEENGAN</p>
 		</div>
-		
-		<div class="frontpageabout">
-		<p>UN</p>
-		<p>DER</p> 
-		<p>CON</p>
-		<p>STRUC</p>
-		<p>TION</p>
-		</div>
-		
+				
 		<div class="frontpageabout">
 		<a href="ABOUT.html">ABOUT</a>
 		</div>
 				
 		<div class="frontpagefiction">
 		<a href="FICTION.html">FICTION</a>
+		</div>
+		
+		<div class="frontpagefiction">
+		<p>UNDER CONSTRUCTION</a>
 		</div>
 	</body>
 </html>
