--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="utf-8"> 
 		<Title>Dee Engan's Bibliography</Title>
 		<link rel="stylesheet" type="text/css"
@@ -13,11 +14,11 @@
 		</div>
 				
 		<div class="frontpageabout">
-		<a href="ABOUT.html">ABOUT</a>
+		<a href="ABOUT.html/"><p class="blood">ABOUT</p></a>
 		</div>
 				
 		<div class="frontpagefiction">
-		<a href="FICTION.html">FICTION</a>
+		<a href="FICTION.html/">FICTION</a>
 		</div>
 		
 		<div class="frontpagefiction">
