--- a/index.html
+++ b/index.html
@@ -17,14 +17,15 @@
 		
 	<!-- BOOKMARK BAR NAME --> 
 		<section id="BOOKMARK BAR">
-			<div class="brambles_max">
-				<p class="title paths">DEEENGAN</p>
+			<div class="container">
+				<img class="banner" src="brambles_100x1004px.png" alt="Pink background behind brambles. Glitch text reads DEEENGAN." width="100" height="1004" decoding="async">
+					<p class="title paths">DEEENGAN</p>
 			</div>
 		</section> 		
 
 	<!-- MENU BARS --> 
 	<div class="blood">		
-	<div class="frontpageabout">
+	<div class="glitch">
 	<a href ="ABOUT.html/"></a>
 	</div>
 	</div>
