--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html>
+<html dir="rtl">
 	<head>
 	
 	<!-- META -->
@@ -18,10 +18,29 @@
 	<!-- BOOKMARK BAR NAME --> 
 		<section id="BOOKMARK BAR">
 			<div class="container">
-				<img class="banner" src="brambles_100x1004px.png" alt="Pink background behind brambles. Glitch text reads DEEENGAN." width="100" height="1004" decoding="async">
-					<p class="title paths">DEEENGAN</p>
+				<div class="banner" src="brambles_100x1004px_flipped_right.png" alt="Pink background behind brambles. Glitch text reads DEEENGAN." width="100" height="1004" decoding="async">
+				<img class="banner_glitch" src="brambles_100x1004px_flipped_right.png" alt="Pink background behind brambles. Glitch text reads DEEENGAN." width="100" height="1004" decoding="async">
+				<img class="banner_glitch" src="brambles_100x1004px_flipped_right.png" alt="Pink background behind brambles. Glitch text reads DEEENGAN." width="100" height="1004" decoding="async">
+				<img class="banner_glitch" src="brambles_100x1004px_flipped_right.png" alt="Pink background behind brambles. Glitch text reads DEEENGAN." width="100" height="1004" decoding="async">
+				<img class="banner_glitch" src="brambles_100x1004px_flipped_right.png" alt="Pink background behind brambles. Glitch text reads DEEENGAN." width="100" height="1004" decoding="async">
+				</div>
 			</div>
-		</section> 		
+		</section> 			
+
+		<div class="container">
+		<section id="DEEENGAN_WORDS">
+		<p class="title paths">DEEENGAN</p>
+		</section>
+		
+		<p class="body_text">This website is currently downloading. More soon! Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+		Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+		Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+		Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+		Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.&lrm;</p>
+	</div>
+
+
+
 
 	<!-- MENU BARS --> 
 	<div class="blood">		
