--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- CSS -->
 		<link rel="stylesheet" type="text/css" href="deeengan.css">
 	
-	<Title>Dee Engan's Website</Title>	
+	<Title>Home - Dee Engan</Title>	
 	</head>
 	<body>
 		
